# chatbot-qa

./: .gitignore  PHASE2_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  test_backend.py
backend/models/: qa_model.py
backend/services/: chatbot_service.py  semantic_search.py
backend/utils/: config.py  content_parser.py  release_manager.py  version_manager.py
data/: content.txt  qa.csv
data/embeddings/: embeddings.pkl
docs/: DEVELOPMENT_GUIDELINES.md  PHASE2_TECHNICAL.md  README.md
frontend/: ui.py
tests_and_demos/: README.md  demo_comparison.py  generate_local_tests.py  test_enhanced_system.py  test_final_system.py
